tests/codegen/fail/scalar/type_alias/attr_with_not_all_resolvers.stderr
error: GraphQL scalar all the resolvers have to be provided via `with` attribute argument or a combination of `to_output_with`, `from_input_with`, `parse_token_with`/`parse_token` attribute arguments
 --> fail/scalar/type_alias/attr_with_not_all_resolvers.rs:7:1
  |
7 | type CustomScalar = Scalar;
  | ^^^^

error: cannot find attribute `graphql` in this scope
 --> fail/scalar/type_alias/attr_with_not_all_resolvers.rs:6:3
  |
6 | #[graphql(to_output_with = Scalar::to_output)]
  |   ^^^^^^^
  |
help: `graphql` is an attribute that can be used by the derive macros `GraphQLEnum`, `GraphQLInputObject`, `GraphQLInterface`, `GraphQLObject`, `GraphQLScalar` and `GraphQLUnion`, you might be missing a `derive` attribute
  |
7 + #[derive(GraphQLEnum, GraphQLInputObject, GraphQLInterface, GraphQLObject, GraphQLScalar, GraphQLUnion)]
8 | type CustomScalar = Scalar;
  |
